--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "stencil-storybook-starter",
+  "name": "intermix-design-system",
   "version": "0.0.1",
-  "description": "Stencil Component Starter",
+  "description": "Stencil based design system",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "es2015": "dist/esm/index.mjs",
@@ -9,7 +9,7 @@
   "types": "dist/types/index.d.ts",
   "collection": "dist/collection/collection-manifest.json",
   "collection:main": "dist/collection/index.js",
-  "unpkg": "dist/stencil-storybook-starter/stencil-storybook-starter.js",
+  "unpkg": "dist/intermix-design-system/intermix-design-system.js",
   "files": [
     "dist/",
     "loader/"
@@ -24,27 +24,26 @@
     "storybook": "npm-run-all --parallel watch storybook.run"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/preset-env": "^7.5.4",
-    "@babel/preset-typescript": "^7.3.3",
-    "@stencil/core": "^1.0.7",
-    "@storybook/addon-info": "^5.1.9",
-    "@storybook/addon-knobs": "^5.1.9",
-    "@storybook/addon-notes": "^5.1.9",
-    "@storybook/addon-viewport": "^5.1.9",
-    "@storybook/html": "^5.1.9",
-    "@types/jest": "^24.0.15",
-    "@types/storybook__addon-knobs": "^5.0.2",
-    "@types/storybook__html": "^5.0.2",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-typescript": "^7.9.0",
+    "@stencil/core": "^1.12.6",
+    "@storybook/addon-info": "^5.3.18",
+    "@storybook/addon-knobs": "^5.3.18",
+    "@storybook/addon-notes": "^5.3.18",
+    "@storybook/addon-viewport": "^5.3.18",
+    "@storybook/html":  "^5.3.18",
+    "@types/jest": "^25.2.1",
+    "@types/storybook__addon-knobs": "^5.2.1",
     "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-dynamic-import-node": "^2.3.0",
-    "case": "^1.6.1",
-    "glob": "^7.1.4",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "case": "^1.6.3",
+    "glob": "^7.1.6",
     "npm-run-all": "^4.1.5",
-    "storybook": "^1.0.0",
-    "typescript": "^3.5.3",
-    "webpack": "^4.35.3"
+    "storybook": "^5.3.18",
+    "typescript": "^3.8.3",
+    "webpack": "^4.43.0"
   },
   "license": "MIT"
 }
