--- a/package.json
+++ b/package.json
@@ -32,15 +32,19 @@
     "@storybook/addon-knobs": "^5.3.18",
     "@storybook/addon-notes": "^5.3.18",
     "@storybook/addon-viewport": "^5.3.18",
-    "@storybook/html":  "^5.3.18",
+    "@storybook/html": "^5.3.18",
     "@types/jest": "^25.2.1",
+    "@types/puppeteer": "2.0.1",
     "@types/storybook__addon-knobs": "^5.2.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "case": "^1.6.3",
     "glob": "^7.1.6",
+    "jest": "24.9.0",
+    "jest-cli": "24.9.0",
     "npm-run-all": "^4.1.5",
+    "puppeteer": "2.1.1",
     "storybook": "^5.3.18",
     "typescript": "^3.8.3",
     "webpack": "^4.43.0"
